# grpc-diner

./: Cargo.toml  README.md  build.rs
src/: client.rs  server.rs
src/protos/: diner.proto  lib.rs
