[package]
name = "grpc-dinner"
version = "0.1.0"
authors = ["David Li <davidli2010@foxmail.com>"]
edition = "2018"
publish = false

[dependencies]
futures = "0.1"
grpcio = "0.5.0-alpha.5"
protobuf = "~2"

[build-dependencies]
protoc-grpcio = "1.1"

[lib]
name = "protos"
path = "src/protos/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
